--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^3.6.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.34.0",
     "sequelize-cli": "^6.6.2"
