--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.3",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-kakao": "^1.0.1",
